----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.5 (2015--)
various changes, see github commit log at
https://github.com/BerryBoessenkool/extremeStat/commits/master
highlights:
- failed parameter fitting is handled much better, warning messages became useful
- several defaults were improved 
- documentation was updated and enhanced
- distLgof now returns weights calculated by 3 different methods
- distLplot now uses supdist, package depends on lmomco >=2.1.3 (version that includes supdist)

new functions: installB, distLextremePlot, distLprint, distLquantile
renamed distLgofPlot for consistency in lowerCamel-derived case usage.


----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.4 (2014-12-04)
depends on berryFunctions again (maintaning functions twice is nonsense)
- distLgof now has ks and quiet argument
- distLplot now has las and ylab arguments
- distLfit gained quiet argument



----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.3 (2014-09-30)
independent from berryFunctions now.
Thus I included lim0, logAxis, logVals, owa, rainbow2, rmse, rsquare
Thinking about how to progress. In my opinion, it would make more sense to depend on berryFunctions, but Ripley does not like to see a subpackage like this on CRAN.


----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.2 (2014-09-22)
First version submitted to CRAN, was not accepted.
Documentation slightly refined here and there
changed all "cat" to "message"
added datname element in dlf, used for main and xlab in all suitable plots

- distLplot:
# log=TRUE now works properly, as it just draws logAxis