@@ -1,7 +1,7 @@
 Package: extremeStat
 Type: Package
 Title: Extreme Value Statistics on a Linear Scale
-Version: 0.4.14
+Version: 0.4.15
 Date: 2015-03-27
 Imports: lmomco (>= 2.1.3), berryFunctions, devtools
 Suggests: pbapply, extRemes
